# pollard-kangaroo-plus-testing

./: .gitignore  README.md  index.html  output_65536_40000_48_128.json  output_8_8000_16_64.json  package-lock.json  package.json  vite.config.js
Ed25519/: ed25519_bridge.h
kangaroo-algorithm/: .gitignore  CMakeLists.txt  README.md
kangaroo-algorithm/gmp-6.3.0/: Makefile  config.h  config.m4  config.status  gen-bases  gen-fac  gen-fib  gen-jacobitab  gen-psqr  gen-sieve  gen-trialdivtab  gmp.h  libgmpxx.la  libtool
kangaroo-algorithm/gmp-6.3.0/.libs/: libgmp.so.10  libgmpxx.lai
kangaroo-algorithm/gmp-6.3.0/cxx/: Makefile
kangaroo-algorithm/gmp-6.3.0/demos/: Makefile
kangaroo-algorithm/gmp-6.3.0/demos/calc/: Makefile
kangaroo-algorithm/gmp-6.3.0/demos/expr/: Makefile
kangaroo-algorithm/gmp-6.3.0/doc/: Makefile
kangaroo-algorithm/gmp-6.3.0/mpf/: Makefile
kangaroo-algorithm/gmp-6.3.0/mpn/: Makefile
kangaroo-algorithm/gmp-6.3.0/mpq/: Makefile
kangaroo-algorithm/gmp-6.3.0/mpz/: Makefile
kangaroo-algorithm/gmp-6.3.0/printf/: Makefile
kangaroo-algorithm/gmp-6.3.0/rand/: Makefile
kangaroo-algorithm/gmp-6.3.0/scanf/: Makefile
kangaroo-algorithm/gmp-6.3.0/tests/: Makefile  t-bswap  t-constants  t-count_zeros  t-hightomask  t-modlinv  t-parity  t-popc  t-sub
kangaroo-algorithm/gmp-6.3.0/tests/.libs/: libtests.la
kangaroo-algorithm/gmp-6.3.0/tune/: Makefile
kangaroo-algorithm/headers/: arguments.h  kangaroo.h  logger.h  secrets.h  table.h
kangaroo-algorithm/source/: arguments.cpp  kangaroo.cpp  logger.cpp  main.cpp  secrets.cpp  table.cpp
(+272 files in other folders)
